<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:transitionName="share_title"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:titleTextColor="@color/white">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_book_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"/>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/ll_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_book_list_sort_tv_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="2dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:text="按人气"
                        android:textColor="@color/common_red"
                        android:textSize="13sp"/>

                    <ImageView
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:duplicateParentState="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/selector_book_list_sort_arrow_bg"/>

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_book_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none"/>

        </LinearLayout>-->

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/right_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            app:fab_addButtonColorNormal="@color/colorPrimary"
            app:fab_addButtonColorPressed="@color/colorPrimaryDark"
            app:fab_addButtonSize="mini"
            app:fab_labelStyle="@style/menu_labels_style"
            app:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:tag="over"
                app:fab_colorDisabled="@color/colorPrimaryDark"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                app:fab_icon="@drawable/icon_over"
                app:fab_size="mini"
                app:fab_title="@string/book_list_sort_over"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_reputation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="reputation"
                app:fab_colorDisabled="@color/colorPrimaryDark"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                app:fab_icon="@drawable/icon_reputation"
                app:fab_size="mini"
                app:fab_title="@string/book_list_sort_reputation"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="new"
                app:fab_colorDisabled="@color/colorPrimaryDark"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                app:fab_icon="@drawable/icon_update"
                app:fab_size="mini"
                app:fab_title="@string/book_list_sort_update"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="hot"
                app:fab_colorDisabled="@color/colorPrimaryDark"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryDark"
                app:fab_icon="@drawable/icon_hot"
                app:fab_size="mini"
                app:fab_title="@string/book_list_sort_follower"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>